--- a/functions/package.json
+++ b/functions/package.json
@@ -7,16 +7,33 @@
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log"
+    "logs": "firebase functions:log",
+    "env": "node tasks/env.js",
+    "copy": "node tasks/copy.js",
+    "test": "npm run test-offline",
+    "test-online": "mocha --reporter spec test/test.online.js --exit",
+    "test-offline": "mocha --reporter spec test/test.offline.js --exit"
   },
   "main": "lib/index.js",
   "dependencies": {
-    "firebase-admin": "~5.13.0",
-    "firebase-functions": "^2.0.0"
+    
+    "cookie-parser": "^1.4.3",
+    "cors": "^2.8.4",
+    "express": "^4.16.3",
+    "firebase-admin": "^5.12.0",
+    "firebase-functions": "^1.0.2",
+    "googleapis": "^30.0.0",
+    "node-fetch": "^2.1.2",
+    "npm": "^6.0.0",
+    "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
-    "tslint": "~5.8.0",
-    "typescript": "~2.8.3"
+    "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
+    "firebase-functions-test": "^0.1.2",
+    "mocha": "^5.1.1",
+    "tslint": "^5.8.0",
+    "typescript": "^2.5.3"
   },
   "private": true
 }
