--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,10 +1,50 @@
 {
-  "name": "Royal Rangers Advancement Tracker Outpost 91",
-  "short_name": "Advancement Tracker",
+  "name": "Royal Ranger Southern Missouri Outpost 91 Advancement Tracker",
+  "short_name": "SOMO 91 Advancement Tracker",
   "start_url": "/",
   "display": "standalone",
   "icons": [
     {
+        "src": "assets/icons/icon-72x72.png",
+        "sizes": "72x72",
+        "type": "image/png"
+      },
+      {
+        "src": "assets/icons/icon-96x96.png",
+        "sizes": "96x96",
+        "type": "image/png"
+      },
+      {
+        "src": "assets/icons/icon-128x128.png",
+        "sizes": "128x128",
+        "type": "image/png"
+      },
+      {
+        "src": "assets/icons/icon-144x144.png",
+        "sizes": "144x144",
+        "type": "image/png"
+      },
+      {
+        "src": "assets/icons/icon-152x152.png",
+        "sizes": "152x152",
+        "type": "image/png"
+      },
+      {
+        "src": "assets/icons/icon-192x192.png",
+        "sizes": "192x192",
+        "type": "image/png"
+      },
+      {
+        "src": "assets/icons/icon-384x384.png",
+        "sizes": "384x384",
+        "type": "image/png"
+      },
+      {
+        "src": "assets/icons/icon-512x512.png",
+        "sizes": "512x512",
+        "type": "image/png"
+      },
+      {
       "src": "assets/icon/icon.png",
       "sizes": "512x512",
       "type": "image/png"
