--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
         "deploy:app": "npm run lint:app:fix && npm run env -- dev && npm run copy && stencil build && firebase deploy --only hosting",
         "deploy:app:live": "npm run lint:app:fix && npm run env -- live && npm run copy && stencil build && firebase deploy -P live --only hosting",
         "deploy:docs": "npm run docs && firebase deploy --only hosting",
-        "dev": "npm run env -- local && npm run copy && sd concurrent \"stencil build --dev --watch\" \"npm run sync\" ",
-        "dev:live": "sd concurrent \"stencil build --watch\" \"npm run sync\" ",
+        "dev": "npm run env -- local && npm run copy && npm run dev:live",
+        "dev:live": "sd concurrent \"stencil build --dev --watch\" \"npm run sync\" ",
         "docs": "npm run docs:components && npm run docs:api",
         "docs:api": "apidoc -i ./functions/src/ -o ./www/docs/api",
         "docs:components": "typedoc --name \"TrackMyGiving Components\" --out ./www/docs/components --exclude **/*.spec.ts ./src",
@@ -45,25 +45,23 @@
         "@ionic/core": "^4.0.0-beta.3",
         "@stencil/core": "^0.9.11",
         "@stencil/router": "^0.2.5",
-        "firebase": "^5.3.1",
-        "sudo": "^1.0.3"
+        "firebase": "^5.3.1"
     },
     "devDependencies": {
         "@stencil/sass": "latest",
         "@stencil/utils": "latest",
         "@types/jest": "^22.2.2",
-        "browser-sync": "^2.24.6",
+        "browser-sync": "^2.24.7",
         "connect-history-api-fallback": "^1.5.0",
         "copy": "^0.3.1",
         "fs-extra": "^4.0.3",
         "husky": "^1.0.0-rc.6",
         "jest": "^22.4.3",
         "madnessenjin": "^1.1.12",
-        "rimraf": "^2.6.2",
         "tslint": "^5.10.0",
         "tslint-ionic-rules": "0.0.14",
         "typedoc": "^0.10.0",
-        "typedoc-plugin-external-module-name": "^1.1.1"
+        "typedoc-plugin-external-module-name": "^1.1.3"
     },
     "author": "Adam Wieseler",
     "license": "MIT",
