--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
         "lint:app": "tslint -c ./tslint.json './src/**/*.{ts,tsx}'",
         "lint:app:fix": "tslint -c ./tslint.json './src/**/*.{ts,tsx}' --fix",
         "serve": "npm run sync",
-        "start": "rimraf www/build && npm run dev --es5",
+        "start": "rimraf www/build && npm run dev",
         "stencil": "rimraf www/* && npm run build",
         "sync": "browser-sync start -c bs-config.js",
         "test": "jest --no-cache",
@@ -42,10 +42,11 @@
         "root": "www"
     },
     "dependencies": {
-        "@ionic/core": "^4.0.0-beta.3",
-        "@stencil/core": "^0.9.11",
-        "@stencil/router": "^0.2.5",
-        "firebase": "^5.3.1"
+        "@ionic/core": "^4.0.0-beta.8",
+        "@stencil/core": "^0.12.4",
+        "@stencil/router": "^0.2.6",
+        "firebase": "^5.4.2",
+        "object-keys": "^1.0.12"
     },
     "devDependencies": {
         "@stencil/sass": "latest",
@@ -54,12 +55,11 @@
         "browser-sync": "^2.24.7",
         "connect-history-api-fallback": "^1.5.0",
         "copy": "^0.3.1",
-        "fs-extra": "^4.0.3",
+        "fs-extra": "^7.0.0",
         "husky": "^1.0.0-rc.6",
         "jest": "^22.4.3",
-        "madnessenjin": "^1.1.12",
         "tslint": "^5.10.0",
-        "tslint-ionic-rules": "0.0.14",
+        "tslint-ionic-rules": "0.0.19",
         "typedoc": "^0.10.0",
         "typedoc-plugin-external-module-name": "^1.1.3"
     },
