--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "version": "0.0.1",
     "description": "Royal Rangers Advancement Tracker for Outpost 91",
     "files": [
-        "dist/"
+        "src/"
     ],
     "scripts": {
         "android": "npm run copy && npm run env -- dev && stencil build --cordova && cordova run android",
@@ -42,9 +42,9 @@
         "root": "www"
     },
     "dependencies": {
-        "@ionic/core": "^4.0.0-beta.8",
-        "@stencil/core": "^0.12.4",
-        "@stencil/router": "^0.2.6",
+        "@ionic/core": "^4.0.0-beta.11",
+        "@stencil/core": "latest",
+        "@stencil/router": "^0.2.5",
         "firebase": "^5.4.2",
         "object-keys": "^1.0.12"
     },
@@ -61,7 +61,8 @@
         "tslint": "^5.10.0",
         "tslint-ionic-rules": "0.0.19",
         "typedoc": "^0.10.0",
-        "typedoc-plugin-external-module-name": "^1.1.3"
+        "typedoc-plugin-external-module-name": "^1.1.3",
+        "typescript": "^3.0.3"
     },
     "author": "Adam Wieseler",
     "license": "MIT",
