--- a/functions/package.json
+++ b/functions/package.json
@@ -16,15 +16,13 @@
   },
   "main": "lib/index.js",
   "dependencies": {
-    
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
-    "firebase-admin": "^5.12.0",
-    "firebase-functions": "^1.0.2",
-    "googleapis": "^30.0.0",
-    "node-fetch": "^2.1.2",
-    "npm": "^6.0.0",
+    "firebase-admin": "^6.0.0",
+    "firebase-functions": "^2.0.5",
+    "googleapis": "^34.0.0",
+    "node-fetch": "^2.2.0",
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
@@ -32,8 +30,9 @@
     "chai-as-promised": "^7.1.1",
     "firebase-functions-test": "^0.1.2",
     "mocha": "^5.1.1",
-    "tslint": "^5.8.0",
-    "typescript": "^2.5.3"
+    "tslint": "^5.10.0",
+    "tslint-ionic-rules": "0.0.19",
+    "typescript": "^3.0.3"
   },
   "private": true
 }
