--- a/package.json
+++ b/package.json
@@ -43,10 +43,11 @@
     },
     "dependencies": {
         "@ionic/core": "^4.0.0-beta.11",
-        "@stencil/core": "latest",
-        "@stencil/router": "^0.2.5",
-        "firebase": "^5.4.2",
-        "object-keys": "^1.0.12"
+        "@stencil/core": "^0.12.4",
+        "@stencil/router": "^0.2.8",
+        "firebase": "^5.5.1",
+        "object-keys": "^1.0.12",
+        "quokka": "0.0.7"
     },
     "devDependencies": {
         "@stencil/sass": "latest",
@@ -58,6 +59,7 @@
         "fs-extra": "^7.0.0",
         "husky": "^1.0.0-rc.6",
         "jest": "^22.4.3",
+        "node-fetch": "^2.2.0",
         "tslint": "^5.10.0",
         "tslint-ionic-rules": "0.0.19",
         "typedoc": "^0.10.0",
