--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
         "build:prerender": "npm run copy && stencil build --prerender",
         "build:stats": "npm run copy && stencil build --stats",
         "deploy:api": "npm run lint:api:fix && cd ./functions && npm run test && firebase deploy --only functions",
-        "deploy:api:live": "npm run lint:api:fix && firebase deploy -P live --only functions",
+        "deploy:api:live": "npm run lint:api:fix && firebase deploy --only functions",
         "deploy:app": "npm run lint:app:fix && npm run env -- dev && npm run copy && stencil build && firebase deploy --only hosting",
-        "deploy:app:live": "npm run lint:app:fix && npm run env -- live && npm run copy && stencil build && firebase deploy -P live --only hosting",
+        "deploy:app:live": "npm run lint:app:fix && npm run env -- live && npm run copy && stencil build && firebase deploy --only hosting",
         "deploy:docs": "npm run docs && firebase deploy --only hosting",
         "dev": "npm run env -- local && npm run copy && npm run dev:live",
         "dev:live": "sd concurrent \"stencil build --dev --watch\" \"npm run sync\" ",
